[gd_scene load_steps=3 format=3 uid="uid://cmwrqtb83qija"]

[ext_resource type="Script" path="res://Scripts/menus/game_over.gd" id="1_8b0yo"]

[sub_resource type="LabelSettings" id="LabelSettings_7f1jx"]
font_size = 83
font_color = Color(1, 1, 0.290196, 1)
outline_size = 9
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.984314)
shadow_offset = Vector2(-5, -1)

[node name="game_over_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8b0yo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 573.0
offset_bottom = 319.0
color = Color(0.317778, 0.160125, 0.37319, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 69.0
offset_top = 25.0
offset_right = 519.0
offset_bottom = 139.0
text = "Game Over"
label_settings = SubResource("LabelSettings_7f1jx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="play_again" type="Button" parent="."]
layout_mode = 0
offset_left = 110.0
offset_top = 199.0
offset_right = 243.0
offset_bottom = 232.0
text = "Play Again "

[node name="quit" type="Button" parent="."]
layout_mode = 0
offset_left = 329.0
offset_top = 197.0
offset_right = 461.0
offset_bottom = 231.0
text = "Quit"

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 214.0
offset_top = 142.0
offset_right = 254.0
offset_bottom = 165.0
horizontal_alignment = 1

[node name="Score2" type="Label" parent="."]
layout_mode = 0
offset_left = 139.0
offset_top = 169.0
offset_right = 179.0
offset_bottom = 192.0
horizontal_alignment = 1

[connection signal="pressed" from="play_again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
